--- a/app/src/main/res/layout/activity_route_select.xml
+++ b/app/src/main/res/layout/activity_route_select.xml
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/text_currentLoc" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_findroutes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
@@ -57,5 +57,5 @@
         android:layout_marginStart="36dp"
         android:layout_marginTop="64dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/button_findroutes" />
 </androidx.constraintlayout.widget.ConstraintLayout>
