--- a/app/src/main/res/layout/suggested_routes.xml
+++ b/app/src/main/res/layout/suggested_routes.xml
@@ -17,7 +17,6 @@
         android:background="#509689"
         android:fontFamily="@font/lobster_two"
         android:text="@string/jeepo"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="@color/white"
         android:textSize="70sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -186,18 +185,42 @@
         app:layout_constraintBottom_toTopOf="@+id/Location"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="166dp"
-        android:layout_height="102dp"
-        android:text="@string/app_name"
+    <!-- Show suggested routes -->
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="310dp"
+        android:layout_height="218dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="51dp"
+        android:layout_marginBottom="51dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/SuggestedRoutes"
-        app:layout_constraintVertical_bias="0.663" />
+        app:layout_constraintTop_toBottomOf="@+id/Fare"
+        app:layout_constraintVertical_bias="0.0">
 
-    <!-- Show suggested routes -->
+
+        <LinearLayout
+            android:id="@+id/RouteLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="visible">
+
+            <Button
+                android:id="@+id/RouteButton"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:fontFamily="@font/poppins_new"
+                android:gravity="center"
+                android:maxLines="1"
+                android:text="@string/to_be_shown"
+                android:textColor="@color/black"
+                app:backgroundTint="#D9D9D9" />
+        </LinearLayout>
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
