A bit of Fix for the UI and upload new Database file

--- a/app/src/main/res/layout/suggested_routes.xml
+++ b/app/src/main/res/layout/suggested_routes.xml
@@ -85,7 +85,7 @@
         android:background="#C1EAD9"
         android:ems="10"
         android:fontFamily="@font/poppins_new"
-        android:gravity= "center_vertical"
+        android:gravity="center_vertical"
         android:hint="@string/input_location"
         android:inputType="textPersonName"
         android:paddingLeft="10dp"
@@ -102,14 +102,14 @@
         android:layout_height="48dp"
         android:layout_marginStart="268dp"
         android:layout_marginTop="28dp"
+        android:autofillHints="none"
         android:background="#C1EAD9"
         android:ems="10"
-        android:textAlignment="center"
-        android:inputType="none"
         android:focusable="false"
+        android:inputType="none"
         android:text="@string/fare"
+        android:textAlignment="center"
         android:textSize="20sp"
-        android:autofillHints="none"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/SuggestedRoutes" />
 
@@ -119,14 +119,14 @@
         android:layout_height="48dp"
         android:layout_marginStart="80dp"
         android:layout_marginTop="28dp"
+        android:autofillHints="none"
         android:background="#C1EAD9"
         android:ems="10"
-        android:textAlignment="center"
-        android:inputType="none"
         android:focusable="false"
+        android:inputType="none"
         android:text="@string/code"
+        android:textAlignment="center"
         android:textSize="18sp"
-        android:autofillHints="none"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/SuggestedRoutes" />
 
@@ -136,14 +136,14 @@
         android:layout_height="48dp"
         android:layout_marginStart="172dp"
         android:layout_marginTop="28dp"
+        android:autofillHints="none"
         android:background="#C1EAD9"
         android:ems="10"
-        android:textAlignment="center"
         android:focusable="false"
         android:inputType="none"
         android:text="@string/km"
+        android:textAlignment="center"
         android:textSize="18sp"
-        android:autofillHints="none"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/SuggestedRoutes" />
 
@@ -158,10 +158,10 @@
         android:autofillHints="none"
         android:background="#9ADDC1"
         android:ems="10"
+        android:focusable="false"
         android:fontFamily="@font/poppins_new"
         android:gravity="center"
         android:inputType="none"
-        android:focusable="false"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:text="@string/routes"
@@ -190,16 +190,10 @@
         android:id="@+id/scrollView2"
         android:layout_width="310dp"
         android:layout_height="218dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="51dp"
-        android:layout_marginBottom="51dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Fare"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toBottomOf="@+id/Km">
 
 
         <LinearLayout
