--- a/app/src/main/res/layout/suggested_routes.xml
+++ b/app/src/main/res/layout/suggested_routes.xml
@@ -139,8 +139,8 @@
 
     <EditText
         android:id="@+id/Km"
-        android:layout_width="60dp"
-        android:layout_height="48dp"
+        android:layout_width="66dp"
+        android:layout_height="52dp"
         android:layout_marginStart="48dp"
         android:layout_marginTop="28dp"
         android:autofillHints="none"
@@ -192,14 +192,17 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Show suggested routes -->
+
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="310dp"
         android:layout_height="218dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Km">
+        app:layout_constraintTop_toBottomOf="@+id/Km"
+        app:layout_constraintVertical_bias="0.539">
 
 
         <LinearLayout
@@ -219,8 +222,18 @@
                 android:text="@string/to_be_shown"
                 android:textColor="@color/black"
                 app:backgroundTint="#D9D9D9" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                tools:layout_editor_absoluteX="288dp"
+                tools:layout_editor_absoluteY="48dp" />
         </LinearLayout>
     </ScrollView>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
