--- a/app/src/main/res/layout/suggested_routes.xml
+++ b/app/src/main/res/layout/suggested_routes.xml
@@ -204,7 +204,7 @@
         app:layout_constraintTop_toBottomOf="@+id/Km"
         app:layout_constraintVertical_bias="0.539">
 
-
+        <!--
         <LinearLayout
             android:id="@+id/RouteLayout"
             android:layout_width="match_parent"
@@ -230,7 +230,8 @@
                 android:text="TextView"
                 tools:layout_editor_absoluteX="288dp"
                 tools:layout_editor_absoluteY="48dp" />
-        </LinearLayout>
+
+        </LinearLayout>-->
     </ScrollView>
 
 
