--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -9,13 +9,11 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
-        android:layout_width="377dp"
-        android:layout_height="206dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="508dp"
+        android:layout_width="382dp"
+        android:layout_height="99dp"
+        android:layout_marginBottom="632dp"
         android:background="@color/white"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,124 +21,57 @@
 
         <ImageView
             android:id="@+id/back_button"
-            android:layout_width="39dp"
-            android:layout_height="36dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="341dp"
+            android:clickable="true"
             android:contentDescription="@string/back_button"
+            android:focusable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.457"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.217"
             app:srcCompat="@drawable/baseline_arrow_back_24" />
 
-        <EditText
-            android:id="@+id/initialInputText"
-            android:layout_width="346dp"
-            android:layout_height="46dp"
-            android:layout_marginStart="31dp"
-            android:layout_marginEnd="31dp"
-            android:layout_marginBottom="7dp"
-            android:autofillHints="None"
-            android:background="#9ADDC1"
-            android:ems="10"
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="67dp"
+            android:layout_marginTop="34dp"
+            android:layout_marginEnd="138dp"
+            android:layout_marginBottom="32dp"
             android:fontFamily="@font/poppins_new"
-            android:hint="@string/enter_location"
-            android:inputType="textPersonName"
-            android:labelFor="@id/initialInputText"
-            android:paddingLeft="10dp"
-            android:textAlignment="textStart"
-            android:textAllCaps="false"
+            android:text="@string/travel_history"
             android:textColor="@color/black"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/initialDesiredText"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.441"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
-
-        <EditText
-            android:id="@+id/initialDesiredText"
-            android:layout_width="347dp"
-            android:layout_height="46dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="31dp"
-            android:autofillHints="None"
-            android:background="#9ADDC1"
-            android:ems="10"
-            android:fontFamily="@font/poppins_new"
-            android:hint="@string/enter_destination"
-            android:inputType="textPersonName"
-            android:paddingLeft="10dp"
-            android:textAlignment="textStart"
-            android:textAllCaps="false"
-            android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.457"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.897" />
-
-        <Button
-            android:id="@+id/mapButton"
-            android:layout_width="134dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="175dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="31dp"
-            android:layout_marginBottom="17dp"
-            android:backgroundTint="#9ADDC1"
-            android:fontFamily="@font/poppins_new"
-            android:text="@string/open_map"
-            android:textAlignment="center"
-            android:textAllCaps="false"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toTopOf="@+id/initialInputText"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/back_button"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="137dp"
-            tools:layout_editor_absoluteY="16dp" />
-
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
-        android:id="@+id/suggestedroute"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginBottom="11dp"
-        android:fontFamily="@font/poppins_new"
-        android:text="@string/suggested_routes"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.463"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout3"
-        android:layout_width="377dp"
-        android:layout_height="125dp"
+        android:layout_width="385dp"
+        android:layout_height="165dp"
+        android:layout_marginBottom="415dp"
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintHorizontal_bias="0.421"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.445">
+        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
+        app:layout_constraintVertical_bias="0.905">
+
 
         <TextView
             android:id="@+id/code"
-            android:layout_width="50dp"
+            android:layout_width="45dp"
             android:layout_height="21dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/poppins_new"
@@ -149,31 +80,33 @@
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/codeInfo"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.048"
+            app:layout_constraintHorizontal_bias="0.043"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/km"
-            android:layout_width="50dp"
+            android:layout_width="45dp"
             android:layout_height="21dp"
-            android:layout_marginTop="13dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="112dp"
             android:fontFamily="@font/poppins_new"
             android:text="@string/km_text"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/kmInfo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.544"
+            app:layout_constraintEnd_toStartOf="@+id/fare"
+            app:layout_constraintHorizontal_bias="0.994"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/fare"
-            android:layout_width="50dp"
+            android:layout_width="45dp"
             android:layout_height="21dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginEnd="15dp"
             android:fontFamily="@font/poppins_new"
             android:text="@string/fare_text"
             android:textColor="@color/black"
@@ -184,30 +117,30 @@
 
         <TextView
             android:id="@+id/routeDisplay"
-            android:layout_width="348dp"
-            android:layout_height="25dp"
+            android:layout_width="352dp"
+            android:layout_height="28dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="3dp"
             android:layout_marginEnd="15dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="44dp"
             android:background="#5CC297"
             android:fontFamily="@font/poppins_new"
             android:gravity="center"
             android:text="@string/initial_to_destination"
             android:textColor="@color/black"
             android:textSize="16sp"
+            android:paddingTop="3dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/codeInfo"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toBottomOf="@+id/kmInfo"
+            app:layout_constraintVertical_bias="0.55" />
 
         <TextView
             android:id="@+id/codeInfo"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginBottom="9dp"
+            android:layout_height="49dp"
+            android:layout_marginBottom="18dp"
             android:fontFamily="@font/poppins_new"
             android:text="@string/code_input"
             android:textColor="@color/black"
@@ -215,33 +148,33 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/routeDisplay"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.055"
+            app:layout_constraintHorizontal_bias="0.049"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/code" />
 
         <TextView
             android:id="@+id/kmInfo"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginEnd="86dp"
-            android:layout_marginBottom="12dp"
+            android:layout_height="49dp"
+            android:layout_marginEnd="120dp"
+            android:layout_marginBottom="11dp"
             android:fontFamily="@font/poppins_new"
             android:text="@string/km_input"
             android:textColor="@color/black"
             android:textSize="32sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/routeDisplay"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.741"
+            app:layout_constraintEnd_toStartOf="@+id/fareInfo"
+            app:layout_constraintHorizontal_bias="0.994"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/km" />
 
         <TextView
             android:id="@+id/fareInfo"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="9dp"
+            android:layout_height="49dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="11dp"
             android:fontFamily="@font/poppins_new"
             android:text="@string/_15"
             android:textColor="@color/black"
@@ -251,7 +184,20 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fare" />
 
-
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="166dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="167dp"
+            android:layout_marginBottom="16dp"
+            android:text="@string/route_date"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/routeDisplay" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
