--- a/app/src/main/res/layout/suggested_routes.xml
+++ b/app/src/main/res/layout/suggested_routes.xml
@@ -36,7 +36,7 @@
             app:layout_constraintVertical_bias="0.217"
             app:srcCompat="@drawable/baseline_arrow_back_24" />
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/initialInputText"
             android:layout_width="346dp"
             android:layout_height="46dp"
@@ -62,7 +62,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/initialDesiredText"
             android:layout_width="347dp"
             android:layout_height="46dp"
